--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "cls && node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "studio": "npx prisma studio",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "studio": "npx prisma studio"
   },
   "keywords": [
     "banco de dados",
